# swagger.json
@@ -35,62 +35,9 @@
         }
       },
       "post": {
-        "tags": [
-          "Students"
-        ],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "sex": {
-                  "example": "any"
-                },
-                "dob": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "classification": {
-                  "example": "any"
-                },
-                "track": {
-                  "example": "any"
-                },
-                "major": {
-                  "example": "any"
-                },
-                "enrolledDate": {
-                  "example": "any"
-                },
-                "plannedGrad": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
+        "parameters": [],
+        "responses": {}
       }
     },
     "/students/{id}": {
@@ -134,7 +81,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstNam": {
+                "firstName": {
                   "example": "any"
                 },
                 "lastName": {
@@ -172,6 +119,9 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -188,50 +138,14 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstNam": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "sex": {
-                  "example": "any"
-                },
-                "dob": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "classification": {
-                  "example": "any"
-                },
-                "track": {
-                  "example": "any"
-                },
-                "major": {
-                  "example": "any"
-                },
-                "enrolledDate": {
-                  "example": "any"
-                },
-                "plannedGrad": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
